Making adjustments for v 0.1.9

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dd_notes
-version = 0.1.0
+version = 0.1.9
 description = Note mixin and template for Django models.
 long_description = file: README.rst
 long_description_content_type = text/markdown
@@ -15,3 +15,4 @@ packages = find:
 python_requires = >=3.7
 install_requires =
     Django >= 3.2
+    django_crispy_forms >= 1.12.0
